--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Hello coursera with visual studio code</h1>
+	<h1>Hello coursera with visual studio code pc2</h1>
 </body>
 </html>
